[package]
name = "Register-TenableADEventsListener"
version = "2.0.0"
edition = "2021"

[target.'cfg(windows)'.build-dependencies]
winresource = { version = "0.1.17", default-features = false }

[dev-dependencies]
mockall = "0.11.2"
uuid = { version = "1.3.1", features = ["v4"]}

[dependencies]
chrono = "0.4"
gag = "1.0.0"
gethostname = "0.2.3"
serde_json = "1.0"
log = "0.4.8"
uuid = "1.3.1"
env_logger = "0.9.0"
minidom = "0.15.2"
state = "0.5.3"
timer = "0.2.0"
memory-stats = "1.0.0"
flate2 = "1.0.24"
clap = { version = "3.2.14", features = ["derive"] }
serde = { version = "1.0.140", features = ["derive"] }
winreg = "0.10"
anyhow = "1.0"
notify = "5.0.0"
tempfile = "3"
encoding_rs_io = "0.1"
csv = "1.1"
remotefs = "0.3"
remotefs-smb = "^0.3"
retry = "2.0.0"
roxmltree = "0.20.0"

[dependencies.windows]
version = "0.36.1"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_EventLog",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Security_Authentication_Identity",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Networking_ActiveDirectory",
    "Win32_Security_Authorization",
    "Win32_System_Memory"
]